--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
+    "formik": "^2.2.9",
+    "primereact": "^9.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -16,7 +18,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-form": "^8.3.10",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
